--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.2.3
+beautifulsoup4==4.8.2
 confusable-homoglyphs==3.2.0
 Django==1.11.28
 django-bootstrap3==12.0.3
+django-bootstrap4==1.1.1
 django-registration==2.4.1
 django-tinymce==2.8.0
 Pillow==7.0.0
@@ -9,4 +11,5 @@ pkg-resources==0.0.0
 psycopg2==2.8.4
 python-decouple==3.3
 pytz==2019.3
+soupsieve==2.0
 sqlparse==0.3.0
